[project]
name = "bounce-house"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "markupsafe>=3.0.2",
    "prometheus-client>=0.21.0",
    "pytest>=8.3.3",
    "tldextract>=5.1.3",
    "validators>=0.34.0",
    "werkzeug>=3.1.3",
]
